Template description changed

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,5 @@
-description=Scala SBT Project Base
+
+description=Template for Scala projects using sbt
 
 name=ExampleProject
 organization=com.solinor
