Changed default domain to fi.paranoid

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,7 +2,7 @@
 description=Template for Scala projects using sbt
 
 name=ExampleProject
-organization=com.solinor
+organization=fi.paranoid
 version=0.1-SNAPSHOT
 scala_version=2.9.2
 
